<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNewStoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/appBarList"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#352D2D"
                app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
                app:subtitleCentered="true"
                app:title="@string/add_new_story"
                app:subtitleTextColor="@color/white"
                app:titleCentered="true"
                app:titleTextColor="@color/white">
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="50dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/rounded_container"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardElevation="10dp">
                    <ImageView
                        android:id="@+id/previewImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/lofi"
                        android:scaleType="centerCrop"
                        android:visibility="visible"
                        android:background="@drawable/rounded_image"
                        android:contentDescription="@string/detail_image"
                        android:transitionName="imgStory"/>
                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnCamera"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button"
                    android:textColor="@color/white"
                    android:text="@string/take_picture"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@id/rounded_container"
                    app:layout_constraintEnd_toStartOf="@id/btnGallery"
                    app:layout_constraintTop_toBottomOf="@id/rounded_container"
                    android:layout_marginEnd="10dp"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGallery"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_upload"
                    android:textColor="@color/white"
                    android:text="@string/upload_image"
                    app:layout_constraintStart_toEndOf="@id/btnCamera"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    app:layout_constraintTop_toTopOf="@id/btnCamera"
                    app:layout_constraintTop_toBottomOf="@id/rounded_container" />

                <TextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_description"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="#403939"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/btnCamera"
                    app:layout_constraintStart_toStartOf="@id/rounded_container"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    android:labelFor="@id/edt_desc"/>


                <EditText
                    android:id="@+id/edt_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_edit_text"
                    android:ems="10"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:minLines="10"
                    android:padding="13dp"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/rounded_container"
                    app:layout_constraintTop_toBottomOf="@id/tv_add" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_story"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    android:textColor="#3C3434"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/btnSend"
                    app:layout_constraintStart_toStartOf="@id/rounded_container"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    android:labelFor="@id/edt_desc"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/using_current_location"
                    android:textSize="14sp"
                    android:layout_gravity="start"
                    app:layout_constraintStart_toStartOf="@id/tv_location"
                    app:layout_constraintBottom_toBottomOf="@id/switch_loc"
                    app:layout_constraintTop_toTopOf="@id/switch_loc"/>


                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:trackTint="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/edt_desc"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />


                <SearchView
                    android:id="@+id/sv_loc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/tv_location"
                    app:layout_constraintTop_toBottomOf="@id/switch_loc"
                    app:layout_constraintEnd_toStartOf="@id/btn_search_loc"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search tag location"
                    android:background="@drawable/border_edit_text"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_search_loc"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/search"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/sv_loc"
                    app:layout_constraintTop_toTopOf="@id/sv_loc"
                    app:layout_constraintBottom_toBottomOf="@id/sv_loc"
                    app:layout_constraintEnd_toEndOf="@id/edt_desc"
                    android:iconifiedByDefault="false"
                    android:queryHint="Search tag location"
                    android:background="@drawable/bg_button_upload"
                    android:visibility="gone"

                    />


                <fragment
                    android:id="@+id/map_view"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/sv_loc"
                    app:layout_constraintStart_toStartOf="@id/rounded_container"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    android:visibility="visible"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_button"
                    android:textColor="@color/white"
                    android:text="@string/send_my_story"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="@id/edt_desc"
                    app:layout_constraintEnd_toEndOf="@id/rounded_container"
                    app:layout_constraintTop_toBottomOf="@id/edt_desc"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>