<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/BarList"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#4E4646"
                app:navigationIcon="@drawable/baseline_refresh_24"
                app:subtitleCentered="true"
                app:title="@string/mystoryapp"
                app:titleCentered="true"
                app:titleTextColor="@color/black">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_logout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/bg_button"
                    android:contentDescription="@string/app_logout"
                    android:src="@drawable/baseline_logout_24"/>

            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_container"
            android:layout_below="@+id/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_welcome"
                android:text="@string/name_user"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_setting"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#4E4646"
                android:contentDescription="@string/add_story"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_map"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@null" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#352E2E"
                android:contentDescription="@string/btn_map"
                android:src="@drawable/round_location_on_24"
                app:tint="@null"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_stories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title_container"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="10dp"
            tools:listitem="@layout/item_story"/>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_story_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:backgroundTint="#352E2E"
        android:contentDescription="@string/setting_languange"
        android:src="@drawable/baseline_add_24"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:tint="@null"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>