...
        app:lottie_rawRes="@raw/success_msg"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        />

    <TextView
        android:id="@+id/tv_info_registrasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_success"
        android:textAlignment="center"
        android:lineHeight="25sp"
        app:layout_constraintTop_toBottomOf="@id/banner_register"
...
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dismiss"
        android:background="@drawable/bg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        android:textStyle="bold"
        android:textColor="@color/white"
...
